--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,29 @@
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.sopra {
+    color: #29b1dd;
+    height: 50px;
+    padding: 15px 0 0 10px;
+}
+
+header nav {
+    background-color: #29b1dd;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    height: 50px;
+    line-height: 50px;
+}
+
+
+
 main {
-    background-color: lightgrey;
+    background-color: #dddddd;
+    min-height: calc(100vh - 100px);
 }
 
-header {
-    height: 48px;
-}
-
-.header-title {
-    color: #29B1DD;
-}
-
-.form-select-width {
-    width: 150px;
-}
-
-.blue-bg {
-    background-color: #29B1DD;
-    height: 90px;
-}
-
-.my-rounded {
-    border-radius: 20px;
-}
-
-.my-width {
-    width: 90%;
-}
