--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,9 @@ main {
     justify-content: center;
     width: calc((100% / 5) - 30px);
     height: calc(100% / 8);
-    background-color: green;
+    background-color: greenyellow;
     border-radius: 30px;
+    margin-top: 20px;
 }
 
 .card i{
